--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="ja">
 <head>
   <meta charset="UTF-8">
-  <title>朔栖まよ🍼🎷演奏済み曲検索</title>
+  <title>朔栖まよ🍼🎷曲検索</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <style>
     html, body {
@@ -14,7 +14,8 @@
     iframe {
       border: none;
       width: 100%;
-      height: 100vh;
+      height: 100%;
+      display: block;
     }
   </style>
 </head>
